

[tool.poetry]
name = "pyqt5-demo"
version = "1.0.0"
description = "学习pyqt5"
authors = ["sevenlikey<sevenlikey@163.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.19.2"
pyqt5 = "^5.15.9"
markdown = "^3.4.3"
pyinstaller = "^5.12.0"

[tool.pytest]
addopts = "-v"

[[tool.poetry.source]]
name = "阿里云镜像"
url = "http://mirrors.aliyun.com/pypi/simple/"